fix #557, fix #555, fix #429

--- a/md-docs/_1x/installation.html
+++ b/md-docs/_1x/installation.html
@@ -28,17 +28,17 @@ permalink: installation/index.html
   </ul>
   <h4>Mobile Applications</h4>
   <div class="tiles">
-    <div class="column size-1of4">
+    <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="ios/index.html">
+          <a href="ios/index.html#getting-started">
             <div><img src="img/ios.png"></div>
             <p>iOS 7+</p>
           </a>
         </div>
       </div>
     </div>
-    <div class="column size-1of4">
+    <div class="column size-1of5">
       <div class="box">
         <div class="container">
           <a href="ios/index.html">
@@ -48,21 +48,31 @@ permalink: installation/index.html
         </div>
       </div>
     </div>
-    <div class="column size-1of4">
+    <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="android/index.html">
+          <a href="android/index.html#getting-started">
             <div><img src="img/android.png"></div>
             <p>Android 4.1+</p>
           </a>
         </div>
       </div>
     </div>
-    <div class="column size-1of4">
+    <div class="column size-1of5">
       <div class="box">
         <div class="container">
           <a href="phonegap/index.html">
             <div><img src="img/phonegap.png"></div>
+            <p>iOS 7+/Android 4.1+</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="column size-1of5">
+      <div class="box">
+        <div class="container">
+          <a href="xamarin.html">
+            <div><img src="img/xamarin.png"></div>
             <p>iOS 7+/Android 4.1+</p>
           </a>
         </div>
@@ -84,7 +94,7 @@ permalink: installation/index.html
     <div class="column size-1of3">
       <div class="box">
         <div class="container">
-          <a href="net/index.html">
+          <a href="net/index.html#getting-started">
             <div><img src="img/dot-net.png"></div>
             <p>Windows 3.5</p>
           </a>
@@ -94,7 +104,7 @@ permalink: installation/index.html
     <div class="column size-1of3">
       <div class="box">
         <div class="container">
-          <a href="java/index.html">
+          <a href="java/index.html#getting-started">
             <div><img src="img/linux.png"></div>
             <p>Java 7,8</p>
           </a>
