--- a/md-docs/_1x/installation.html
+++ b/md-docs/_1x/installation.html
@@ -71,7 +71,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="xamarin.html">
+          <a href="xamarin/index.html#getting-started">
             <div><img src="img/xamarin.png"></div>
             <p>iOS 7+/Android 4.1+</p>
           </a>
