--- a/md-docs/_1x/installation.html
+++ b/md-docs/_1x/installation.html
@@ -61,7 +61,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="phonegap/index.html">
+          <a href="phonegap/index.html#getting-started">
             <div><img src="img/phonegap.png"></div>
             <p>iOS 7+/Android 4.1+</p>
           </a>
