--- a/md-docs/_1x/installation.html
+++ b/md-docs/_1x/installation.html
@@ -31,7 +31,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="ios/index.html#getting-started">
+          <a href="ios/index.html">
             <div><img src="img/ios.png"></div>
             <p>iOS 7+</p>
           </a>
@@ -51,7 +51,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="android/index.html#getting-started">
+          <a href="android/index.html">
             <div><img src="img/android.png"></div>
             <p>Android 4.1+</p>
           </a>
@@ -61,7 +61,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="phonegap/index.html#getting-started">
+          <a href="phonegap/index.html">
             <div><img src="img/phonegap.png"></div>
             <p>iOS 7+/Android 4.1+</p>
           </a>
@@ -71,7 +71,7 @@ permalink: installation/index.html
     <div class="column size-1of5">
       <div class="box">
         <div class="container">
-          <a href="xamarin/index.html#getting-started">
+          <a href="xamarin/index.html">
             <div><img src="img/xamarin.png"></div>
             <p>iOS 7+/Android 4.1+</p>
           </a>
@@ -94,7 +94,7 @@ permalink: installation/index.html
     <div class="column size-1of3">
       <div class="box">
         <div class="container">
-          <a href="net/index.html#getting-started">
+          <a href="net/index.html">
             <div><img src="img/dot-net.png"></div>
             <p>Windows 3.5</p>
           </a>
@@ -104,7 +104,7 @@ permalink: installation/index.html
     <div class="column size-1of3">
       <div class="box">
         <div class="container">
-          <a href="java/index.html#getting-started">
+          <a href="java/index.html">
             <div><img src="img/linux.png"></div>
             <p>Java 7,8</p>
           </a>
