replace logo and platform

--- a/md-docs/_1x/installation.html
+++ b/md-docs/_1x/installation.html
@@ -96,7 +96,7 @@ permalink: installation/index.html
         <div class="container">
           <a href="net/index.html">
             <div><img src="img/dot-net.png"></div>
-            <p>Windows 3.5</p>
+            <p>.NET 3.5 (WPF)</p>
           </a>
         </div>
       </div>
@@ -146,7 +146,7 @@ permalink: installation/index.html
       <div class="box">
         <div class="container">
           <a href="sync-gateway/index.html">
-            <div><img src="img/dot-net.png"></div>
+            <div><img src="img/windows.png"></div>
             <p>Windows 8,10/Server 2012,2016</p>
           </a>
         </div>
